--- a/.travis.yaml
+++ b/.travis.yaml
@@ -1,18 +1,20 @@
 sudo:
+language: generic
+
 services:
  - docker
 
 before_install:
-  - docker build -t ssabin/react-test -f ./client/Dockerfile .dev ./client
+  - docker build -t ssabin/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - - docker run -e CI=true USERNAME/react-test npm test
+  - docker run -e CI=true USERNAME/react-test npm test
 
 after_success:
-  - docker built -t ssabin/multi-client ./client
-  - docker built -t ssabin/multi-nginx ./nginx
-  - docker built -t ssabin/multi-server ./server
-  - docker built -t ssabin/multi-worker ./worker
+  - docker build -t ssabin/multi-client ./client
+  - docker build -t ssabin/multi-nginx ./nginx
+  - docker build -t ssabin/multi-server ./server
+  - docker build -t ssabin/multi-worker ./worker
 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
