--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - docker build -t ssabin/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - - docker run -e CI=true USERNAME/react-test npm test
+  - - docker run -e CI=true ssabin/react-test npm test
 
 after_success:
   - docker built -t ssabin/multi-client ./client
