--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-sudo:
+sudo: required
 language: generic
 services:
  - docker
@@ -7,13 +7,13 @@ before_install:
   - docker build -t ssabin/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - - docker run -e CI=true ssabin/react-test npm test
+  - docker run -e CI=true ssabin/react-test npm test
 
 after_success:
-  - docker built -t ssabin/multi-client ./client
-  - docker built -t ssabin/multi-nginx ./nginx
-  - docker built -t ssabin/multi-server ./server
-  - docker built -t ssabin/multi-worker ./worker
+  - docker build -t ssabin/multi-clients ./client
+  - docker build -t ssabin/multi-nginx ./nginx
+  - docker build -t ssabin/multi-server ./server
+  - docker build -t ssabin/multi-worker ./worker
 
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Take those images and push them to docker hub
